--- a/static/custom.css
+++ b/static/custom.css
@@ -13,7 +13,7 @@
   --body-background: #ffffff;
   --body-font-color: #343a40;
 
-  --button-background: #62cb97;
+  --button-background: #2b5797;
   --button-border-color: #4ec58a;
 
   --link-color: #0a4472;
@@ -41,7 +41,7 @@
     --body-background: #ffffff;
     --body-font-color: #343a40;
 
-    --button-background: #62cb97;
+    --button-background: #2b5797;
     --button-border-color: #4ec58a;
 
     --link-color: #0a4472;
