--- a/static/custom.css
+++ b/static/custom.css
@@ -7,13 +7,13 @@
 /* Light mode theming */
 :root,
 :root[color-mode="light"] {
-  --header-background: #08365b;
-  --header-font-color: #fec039;
+  --header-background: #0a4472;
+  --header-font-color: #ffffff;
 
   --body-background: #ffffff;
   --body-font-color: #343a40;
 
-  --button-background: #2b5797;
+  --button-background: #0a4472;
   --button-border-color: #fec039;
 
   --link-color: #0a4472;
@@ -35,13 +35,13 @@
 }
 @media (prefers-color-scheme: light) {
   :root {
-    --header-background: #08365b;
-    --header-font-color: #fec039;
+    --header-background: #0a4472;
+    --header-font-color: #ffffff;
 
     --body-background: #ffffff;
     --body-font-color: #343a40;
 
-    --button-background: #2b5797;
+    --button-background: #0a4472;
     --button-border-color: #fec039;
 
     --link-color: #0a4472;
@@ -65,7 +65,7 @@
 
 /* Dark mode theming */
 :root[color-mode="dark"] {
-  --header-background: #fec039;
+  --header-background: #0a4472;
   --header-font-color: #ffffff;
 
   --body-background: #343a40;
@@ -93,7 +93,7 @@
 }
 @media (prefers-color-scheme: dark) {
   :root {
-    --header-background: #4ec58a;
+    --header-background: #0a4472;
     --header-font-color: #ffffff;
 
     --body-background: #343a40;
