--- a/static/custom.css
+++ b/static/custom.css
@@ -71,8 +71,8 @@
   --body-background: #343a40;
   --body-font-color: #ced3d8;
 
-  --button-background: #62cb97;
-  --button-border-color: #4ec58a;
+  --button-background: #0a4472;
+  --button-border-color: #fec039;
 
   --link-color: #7ac29e;
   --link-color-visited: #c27a9e;
@@ -99,8 +99,8 @@
     --body-background: #343a40;
     --body-font-color: #ced3d8;
 
-    --button-background: #62cb97;
-    --button-border-color: #4ec58a;
+    --button-background: #0a4472;
+    --button-border-color: #fec039;
 
     --link-color: #7ac29e;
     --link-color-visited: #c27a9e;
