--- a/custom.css
+++ b/custom.css
@@ -13,7 +13,7 @@
   --body-background: #ffffff;
   --body-font-color: #343a40;
 
-  --button-background: #041E42;
+  --button-background: #0A4472;
   --button-border-color: #fec039;
 
   --link-color: #0a4472;
@@ -41,7 +41,7 @@
     --body-background: #ffffff;
     --body-font-color: #343a40;
 
-    --button-background: #041E42;
+    --button-background: #0A4472;
     --button-border-color: #fec039;
 
     --link-color: #0a4472;
