updates to darkmode css

--- a/static/custom.css
+++ b/static/custom.css
@@ -72,9 +72,9 @@
   --body-font-color: #ced3d8;
 
   --button-background: #0A4472;
-  --button-border-color: #fec039;
+  --button-border-color: #FEC039;
 
-  --link-color: #0A4472;
+  --link-color: #FEC039;
   --link-color-visited: #c27a9e;
 
   --code-background: #2f353a;
@@ -100,9 +100,9 @@
     --body-font-color: #ced3d8;
 
     --button-background: #0A4472;
-    --button-border-color: #fec039;
+    --button-border-color: #FEC039;
 
-    --link-color: #0A4472;
+    --link-color: #FEC039;
     --link-color-visited: #c27a9e;
 
     --code-background: #2f353a;
