update to darkmode css

--- a/static/custom.css
+++ b/static/custom.css
@@ -68,7 +68,7 @@
   --header-background: #041E42;
   --header-font-color: #ffffff;
 
-  --body-background: #454d54;
+  --body-background: #394046;
   --body-font-color: #ced3d8;
 
   --button-background: #0A4472;
@@ -96,7 +96,7 @@
     --header-background: #041E42;
     --header-font-color: #ffffff;
 
-    --body-background: #454d54;
+    --body-background: #394046;
     --body-font-color: #ced3d8;
 
     --button-background: #0A4472;
